--- a/Project.css
+++ b/Project.css
@@ -2,7 +2,7 @@ body {
 	background-image: linear-gradient(to right, #59acff, #ff8285);
 }
 
-#key1 {
+#rock {
   background-color: #59acff;
   border: none;
   color: black;
@@ -13,7 +13,7 @@ body {
   font-size: 24px;
 }
 
-#key2 {
+#paper {
   background-color: #ffff66;
   border: none;
   color: black;
@@ -24,7 +24,7 @@ body {
   font-size: 24px;
 }
 
-#key3 {
+#scissors {
   background-color: #ff8285;
   border: none;
   color: black;
@@ -33,4 +33,15 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 24px;
+}
+#reset {
+  margin-top: 40px;
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 30px 60px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
 }
