--- a/Project.css
+++ b/Project.css
@@ -34,6 +34,7 @@ body {
   display: inline-block;
   font-size: 24px;
 }
+
 #reset {
   margin-top: 40px;
   background-color: white;
@@ -44,4 +45,16 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
+}
+
+.result {
+  width: 260px;
+  height: 55px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  text-align: center;
+  line-height: 34px;
+  font-family: digital;
+  padding: 0px 5px 0px 5px;
+  font-size: 25px;
 }
