--- a/Project.css
+++ b/Project.css
@@ -2,6 +2,10 @@ body {
 	background-image: linear-gradient(to right, #59acff, #ff8285);
 }
 
+h1 {
+    font-size: 240px;
+}
+
 #rock {
   background-color: #008CBA;
   border: none;
@@ -36,10 +40,11 @@ body {
 }
 
 #reset {
-  background-color: #e7e7e7;
+  margin-top: 3px;
+  background-color: #7c7c7c;
   border: none;
   color: black;
-  padding: 40px 80px;
+  padding: 40px 317.5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -79,5 +84,5 @@ body {
 #reset:hover {
   background-color: white; 
   color: black; 
-  border: 4px solid #008CBA;
+  border: 4px solid #7c7c7c;
 }
