--- a/Project.css
+++ b/Project.css
@@ -1,41 +1,30 @@
-body {
-	background-image: url('https://img.freepik.com/free-photo/blue-gradient-abstract-background-empty-room_1258-4436.jpg?size=626&ext=jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 #logo {
-  height: 240px;
+  height: 200px;
   width: 60%;
 }
 
-.rock {
+#rock {
   height: 200px;
   width: 220px;
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTxrmB1_zXv1lQV0wqSNURKppxgiq6MpArFrWutg4hyeJfJMtlV');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: white;
 }
 
 #paper {
   height: 200px;
   width: 220px;
-  background-image: url('https://www.123freevectors.com/wp-content/original/127956-cool-orange-abstract-asymmetric-random-lines-background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: white;
 }
 
 #scissors {
   height: 200px;
   width: 220px;
-  background-image: url('https://i.pinimg.com/564x/b3/98/fb/b398fb40a5cdf4dd2a3c8f6de1334058.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: white;
 }
 
 .reset {
   height: 200px;
   width: 220px;
+  background-color: white;
 }
 
 .result {
@@ -52,27 +41,18 @@ body {
   border: 13px double gray;
   margin: 6px;
 }
-
 #rock:hover {
-  background-color: white; 
-  color: black; 
-  border: 4px solid #008CBA;
+  background-color: lightblue;
 }
 
 #paper:hover {
-  background-color: white; 
-  color: black; 
-  border: 4px solid #ffff66;
+  background-color: lightblue;
 }
 
 #scissors:hover {
-  background-color: white; 
-  color: black; 
-  border: 4px solid #f44336;
+  background-color: lightblue;
 }
 
-#reset:hover {
-  background-color: white; 
-  color: black; 
-  border: 4px solid #7c7c7c;
+.reset:hover {
+  background-color: lightblue;
 }
